/*
Copyright 2019 The KubeCarrier Authors.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";
package kubecarrier.api.v1;
option go_package = "v1";

import "google/api/annotations.proto";

import "meta.proto";
import "request.proto";

message Provider {
  ObjectMeta metadata = 1;
  ProviderSpec spec = 2;
}

message ProviderSpec {
  AccountMetadata metadata = 1;
}

message ProviderList {
  ListMeta metadata = 1;
  repeated Provider items = 2;
}

message AccountMetadata {
  string displayName = 1;
  string description = 2;
}

service ProviderService {
  rpc List(ListRequest) returns (ProviderList) {
    option (google.api.http) = {
      get : "/v1/accounts/{account}/providers"
    };
  };
  rpc Get(GetRequest) returns (Provider) {
    option (google.api.http) = {
      get : "/v1/accounts/{account}/providers/{name}"
    };
  };
}
